--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@ html {
 }
 
 #container {
-    height: 400px;
-    width: 550px;
+    
+    width: 100%;
+    max-width: 550px;
     background-color: #9dd2ea;
     margin: 100px auto;
     border-radius: 10px;
@@ -20,7 +21,7 @@ html {
     color: #888e5f;
     padding: 11px;
     position: absolute;
-    left: 500px;
+    left: 480px;
     box-shadow: 0px 4px 0px 0px #9da853;
 }
 
@@ -43,7 +44,8 @@ html {
 }
 
 #question {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 150px;
     margin: 50px auto 10px auto;
     background-color: #9da0ea;
@@ -55,7 +57,8 @@ html {
 }
 
 #instruction {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 50px;
     margin: 10px auto 10px auto;
     background-color: #8481d9;
@@ -65,17 +68,19 @@ html {
 }
 
 #choices {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 100px;
     margin: 5px auto ;
+    display: flex;
  }
 
 .box {
     height: 85px;
-    width: 85px;
+    width: 100%;
+    max-width: 85px;
     background-color: #fff;
-    display: inline-block;
-    grid-template-columns: auto auto auto auto;
+    
     margin-right: 32px;
     border-radius: 3px;
     cursor: pointer;
@@ -108,7 +113,8 @@ html {
 
 #startreset{
     background-color: rgba(255, 255, 255, 0.5);
-    width: 78px;
+    max-width: 78px;
+    width: 100%;
     padding: 10px;
     text-align: center;
     margin: 0 auto;
@@ -119,7 +125,8 @@ html {
 }
 
 #timeremaining{
-    width: 152px;
+    width: 100%;
+    max-width: 152px;
     padding: 10px;
     position: absolute;
     top: 395px;
@@ -135,7 +142,8 @@ html {
 
 #gameover {
     height: 200px;
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     background: linear-gradient(#f3ca6b, #f3706c);
     color: white;
     font-size: 2.5em;
